samples/_failures_safe/1761553898_030d06_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2dcf5f09.c: In function ‘main’:
./samples/SAFE/__tmp_2dcf5f09.c:177:36: error: expected ‘)’ at end of input
  177 |         if (token.type == TOKEN_EOF
      |            ~                       ^
      |                                    )
./samples/SAFE/__tmp_2dcf5f09.c:177:9: error: expected declaration or statement at end of input
  177 |         if (token.type == TOKEN_EOF
      |         ^~
./samples/SAFE/__tmp_2dcf5f09.c:177:9: error: expected declaration or statement at end of input
